progress on experiments, new title

--- a/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
+++ b/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
@@ -102,9 +102,9 @@
 \newcommand{\whead}{wh}
 
 
-\title{Visually Grounded Video Reasoning in Selective Attention Memory}
+\title{Learning multi-step spatio-temporal reasoning with Selective Attention Memory Network}
 
-\author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Emre Sevgen, Ahmet Ozcan}
+\author{T.S. Jayram, Tomasz Kornuta, Vincent Albouy, Emre Sevgen, Ahmet Ozcan}
 
 \begin{document}
 \maketitle
@@ -132,7 +132,7 @@ We also demonstrate that our model has extraordinary generalization capabilities
 \input{summary}
 
 \section*{Acknowledgement}
-The authors would like to thank to the authors of COG paper (Igor Ganichev in particular) for sharing the detailed performances achieved by their COG baseline model.
+The authors would like to thank to the authors of COG paper (Igor Ganichev in particular) for sharing the detailed results with performances achieved by their COG baseline model.
 	
 \newpage
 \bibliographystyle{abbrv}
