summary, paragraph about MANNs and compositional reasoning

--- a/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
+++ b/2019_neurips_kr2ml/2019_kr2ml_samnet_main.tex
@@ -134,7 +134,7 @@ We also demonstrate that our model has extraordinary generalization capabilities
 \section*{Acknowledgement}
 The authors would like to thank to the authors of COG paper (Igor Ganichev in particular) for sharing the detailed results with performances achieved by their COG baseline model.
 	
-\newpage
+%\newpage
 \bibliographystyle{abbrv}
 \bibliography{../cog_bibliography}
 
