--- a/2019_neurips_kr2ml/model.tex
+++ b/2019_neurips_kr2ml/model.tex
@@ -26,7 +26,11 @@
 \end{figure}
 
 SAM Network (SAMNet for short) is an end-to-end differentiable recurrent model equipped with an external memory~(\cref{fig:samnet}).
-The model makes a single pass over the frames in temporal order, accessing one frame at a time.
+At the conceptual level SAMNet draws from two core ideas:
+compositional reasoning as proposed e.g. in MAC (Memory-Attention-Composition) Network~\cite{hudson2018compositional,marois2018transfer}
+and utilization of external memory in Memory-Augmented Neural Networks such as NTM (Neural Turing Machine)~\cite{graves2014neural}, DNC (Differentiable Neural Computer)~\cite{graves2016hybrid} or DWM (Differentiable Working Memory)~\cite{jayram2018learning}.
+
+A distinctive feature of the SAM Network is that it makes a single pass over the frames in temporal order, accessing one frame at a time.
 The memory locations store relevant objects representing contextual information about words in text and visual objects extracted from video. 
 Each location of the memory stores a $d$-dimensional vector. %, where $d$ is a global parameter.
 The memory can be accessed through either content-based addressing, via dot-product attention, or location-based addressing. 
