--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -103,17 +103,6 @@
   publisher = {Nature Publishing Group},
 }
 
-@Article{graves2016hybrid,
-  author    = {Graves, Alex and Wayne, Greg and Reynolds, Malcolm and Harley, Tim and Danihelka, Ivo and Grabska-Barwi{\'n}ska, Agnieszka and Colmenarejo, Sergio G{\'o}mez and Grefenstette, Edward and Ramalho, Tiago and Agapiou, John and others},
-  title     = {Hybrid computing using a neural network with dynamic external memory},
-  journal   = {Nature},
-  year      = {2016},
-  volume    = {538},
-  number    = {7626},
-  pages     = {471},
-  publisher = {Nature Publishing Group},
-}
-
 @Article{mogadala2019trends,
   author  = {Mogadala, Aditya and Kalimuthu, Marimuthu and Klakow, Dietrich},
   title   = {Trends in Integration of Vision and Language Research: A Survey of Tasks, Datasets, and Methods},
@@ -272,5 +261,50 @@
   year={2019}
 }
 
+@Article{graves2016adaptive,
+  author  = {Graves, Alex},
+  title   = {Adaptive computation time for recurrent neural networks},
+  journal = {arXiv preprint arXiv:1603.08983},
+  year    = {2016},
+}
+
+@Article{csordas2019improved,
+  author = {Csord{\'a}s, R{\'o}bert and Schmidhuber, J{\"u}rgen},
+  title  = {Improved Addressing in the Differentiable Neural Computer},
+  year   = {2019},
+}
+
+@InProceedings{marois2018transfer,
+  author    = {Marois, Vincent and Jayram, TS and Albouy, Vincent and Kornuta, Tomasz and Bouhadjar, Younes and Ozcan, Ahmet S},
+  title     = {On transfer learning using a {MAC} model variant},
+  booktitle = {NeurIPS'18 Visually-Grounded Interaction and Language (ViGIL) Workshop},
+  year      = {2018},
+  journal   = {arXiv preprint arXiv:1811.06529},
+}
+
+@Article{graves2016hybrid,
+  author    = {Graves, Alex and Wayne, Greg and Reynolds, Malcolm and Harley, Tim and Danihelka, Ivo and Grabska-Barwi{\'n}ska, Agnieszka and Colmenarejo, Sergio G{\'o}mez and Grefenstette, Edward and Ramalho, Tiago and Agapiou, John and others},
+  title     = {Hybrid computing using a neural network with dynamic external memory},
+  journal   = {Nature},
+  year      = {2016},
+  volume    = {538},
+  number    = {7626},
+  pages     = {471},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{graves2014neural,
+  author  = {Graves, Alex and Wayne, Greg and Danihelka, Ivo},
+  title   = {Neural turing machines},
+  journal = {arXiv preprint arXiv:1410.5401},
+  year    = {2014},
+}
+
+@Article{jayram2018learning,
+  author  = {Jayram, TS and Bouhadjar, Younes and McAvoy, Ryan L and Kornuta, Tomasz and Asseman, Alexis and Rocki, Kamil and Ozcan, Ahmet S},
+  title   = {Learning to Remember, Forget and Ignore using Attention Control in Memory},
+  journal = {arXiv preprint arXiv:1809.11087},
+  year    = {2018},
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
