--- a/2019_neurips_kr2ml/intro.tex
+++ b/2019_neurips_kr2ml/intro.tex
@@ -74,9 +74,9 @@ For example, typical solutions to the bAbI reasoning task, such as Memory Networ
 
 \paragraph{Contributions.}
 %Such approaches also differ from the human cognitive strategies.  Humans have the ability to selectively pay attention and store salient items or events in memory based on their goals.  Working memory and episodic memory systems are responsible for this remarkable ability. 
-In this paper we focus on Visual Reasoning, however, however, instead of enabling the system to access all input frames at every reasoning step, we decided to follow a totally different, nevertheless more natural approach.
+In this paper we focus on Visual Reasoning, however, instead of enabling the system to access all input frames at every reasoning step, we decided to follow a totally different, nevertheless more natural approach.
 Inspired by human cognitive capacity to selectively pay attention and store salient information in memory,
-we introduce a new model that can dynamically processes video input frame-by-frame, reasons over a given image and remembers the salient concepts to answer questions.
+we introduce a new model that can dynamically processes video input frame-by-frame, reasons over a given image and remembers the salient concepts required for answering the questions.
 Our results based on the COG dataset \cite{yang2018dataset} indicate that the model is capable of:
 (1) learning the temporal association, i.e., grounding the time-related words with meaning;
 	%\item Learning the concept of time
