Epoch 7 hard-na-hard

--- a/2019_neurips_kr2ml/experiments.tex
+++ b/2019_neurips_kr2ml/experiments.tex
@@ -90,28 +90,28 @@ In this case, the SAMNet model also reached much better performance, and, intere
   \vskip -0.4cm
   \null\hfill
   \begin{subfigure}{0.25\textwidth}
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 1"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 1"}
 	\caption{Frame: \textbf{1}\newline Ground Truth: \textbf{false}}
 	\label{fig:frame-1}
   \end{subfigure}%
   \hfill
   \begin{subfigure}{0.25\textwidth}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 2"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2"}
 	\caption{Frame: \textbf{2}\newline Ground Truth: \textbf{false}}
 	\label{fig:frame-2}
   \end{subfigure}%
   \hfill
   \begin{subfigure}{0.25\textwidth}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 3"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 3"}
 	\caption{Frame: \textbf{3}\newline Ground Truth: \textbf{true}}
 	\label{fig:frame-3}
   \end{subfigure}%
   \hfill
   \begin{subfigure}{0.25\textwidth}
 	\centering
-	\includegraphics[width=0.9\linewidth]{"../img/visualization/sample 2/Frame 4"}
+	\includegraphics[width=0.9\linewidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4"}
 	\caption{Frame: \textbf{4}\newline Ground Truth: \textbf{true}}
 	\label{fig:frame-4}
   \end{subfigure}%
@@ -137,7 +137,7 @@ So when analyzing Frames \textbf{3} and \textbf{4} one need to recall the \textb
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.95\textwidth]{"../img/visualization/sample 2/Frame 2 Step 1"}
+	\includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2 Step 1"}
 	\caption{State of the SAM Cell after 1-st step of reasoning on Frame 2.} 
 	\label{fig:frame-2-step-1}
 \end{figure}
@@ -153,7 +153,7 @@ However, we can also notice that the 2nd slot seems to be partially "polluted" b
 
 \begin{figure}[!h]
 \centering
-  \includegraphics[width=0.95\textwidth]{"../img/visualization/sample 2/Frame 2 Step 6"}
+  \includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 2 Step 6"}
 \caption{State of the SAM Cell after 6-th step of reasoning on Frame 2.} 
 \label{fig:frame-2-step-6}
 \end{figure}
@@ -167,7 +167,7 @@ Sadly, also  in here we observe the "pollution" of addresses 3 and 4.
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.95\textwidth]{"../img/visualization/sample 2/Frame 4 Step 1"}
+	\includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4 Step 1"}
 	\caption{State of the SAM Cell after 1-st step of reasoning on Frame 4.} 
 	\label{fig:frame-4-step-1}
 \end{figure}
@@ -178,7 +178,7 @@ Besides that, we can notice that memory content remained more or less unchanged,
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.95\textwidth]{"../img/visualization/sample 2/Frame 4 Step 6"}
+	\includegraphics[width=0.95\textwidth]{"../img/visualization/experiment_run_20190917_022319/Frame 4 Step 6"}
 	\caption{State of the SAM Cell after 6-th step of reasoning on Frame 4.} 
 	\label{fig:frame-4-step-6}
 \end{figure}
